[gd_scene load_steps=7 format=3 uid="uid://dgo2sl2lyctxw"]

[ext_resource type="Script" path="res://UI/Logger/Scripts/Log_UI.gd" id="1_vfehx"]
[ext_resource type="Theme" uid="uid://dst0whbgyyej4" path="res://UI/styles/window_theme.tres" id="2_mxipl"]
[ext_resource type="AudioStream" uid="uid://gmi0wrfx8x6o" path="res://Assets/Audio/615531__crash_358__sci-fi-ui-button-sound-006.wav" id="3_prbwg"]
[ext_resource type="AudioStream" uid="uid://hhdrcer23hu8" path="res://Assets/Audio/370847__cabled_mess__spacey-click_minimal-ui-sounds.wav" id="4_f6rh1"]
[ext_resource type="AudioStream" uid="uid://cuqywvw50kpwh" path="res://Assets/Audio/589332__mrfossy__sfx_monosjam_slayer_impulse_13.wav" id="5_88okv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62qgd"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)

[node name="debug" type="CanvasLayer"]
layer = 3
script = ExtResource("1_vfehx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 21.0
offset_right = -1097.0
offset_bottom = -487.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_mxipl")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mxipl")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mxipl")

[node name="Bort" type="PanelContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mxipl")
theme_override_styles/panel = SubResource("StyleBoxFlat_62qgd")

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer/Bort"]
layout_mode = 2
theme = ExtResource("2_mxipl")
theme_override_constants/margin_left = 20

[node name="Button" type="Button" parent="Control/Panel/VBoxContainer/Bort/MarginContainer"]
custom_minimum_size = Vector2(33, 33)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_mxipl")
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_mxipl")
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Log_label" type="RichTextLabel" parent="Control/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_mxipl")
bbcode_enabled = true
text = "LOG"

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mxipl")

[node name="PanelContainer" type="PanelContainer" parent="Control/Panel/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_mxipl")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer/VBoxContainer3/PanelContainer"]
layout_mode = 2
theme = ExtResource("2_mxipl")

[node name="LineEdit" type="LineEdit" parent="Control/Panel/VBoxContainer/VBoxContainer3/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_mxipl")
placeholder_text = "Введи команду..."
clear_button_enabled = true
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true

[node name="X" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_prbwg")

[node name="X2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f6rh1")

[node name="X3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_88okv")

[connection signal="button_down" from="Control/Panel/VBoxContainer/Bort/MarginContainer/Button" to="." method="_on_button_button_down"]
[connection signal="text_submitted" from="Control/Panel/VBoxContainer/VBoxContainer3/PanelContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
